<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewTeamNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:text="SPARX" />

        <TextView
            android:id="@+id/textViewTeamName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewTeamNickname"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:text="Xerox Corporation &amp; Webster High Schools" />

        <ImageView
            android:id="@+id/networkImageViewRobot"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/textViewTeamName"
            android:contentDescription="@string/image_of_robot"
            tools:src="@drawable/icon_launcher"/>

        <TextView
            android:id="@+id/texViewLabelOverallRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewTeamName"
            android:layout_toRightOf="@+id/networkImageViewRobot"
            android:text="@string/win_loss_tie" />

        <TextView
            android:id="@+id/textViewOverallRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/texViewLabelOverallRecord"
            android:layout_toRightOf="@+id/networkImageViewRobot"
            android:text="Not implemented yet!" />

        <TextView
            android:id="@+id/textViewAutoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/networkImageViewRobot"
            android:text="@string/auto"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textViewLabelStartWithBall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewAutoLabel"
            android:text="@string/started_with_a_ball" />

        <TextView
            android:id="@+id/textViewStartWithBall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewAutoLabel"
            android:layout_toRightOf="@id/textViewLabelStartWithBall"
            tools:text="3 of 4 (75%)" />


        <EditText
            android:id="@id/editTextPenaltiesComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewLabelTechnicalFoulsComments"
            android:editable="false"
            tools:text="Comments\nMoe Comments" />

        <TextView
            android:id="@+id/textViewLabelGeneralComments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextPenaltiesComments"
            android:text="@string/general_comments" />

        <EditText
            android:id="@id/editTextGeneralComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewLabelGeneralComments"
            android:editable="false"
            tools:text="Comments\nMoe Comments" />


    </RelativeLayout>
</ScrollView>
