<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/number_of_totes_stacked"
        android:id="@+id/textView9"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="90dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/second"
        android:id="@+id/textView11"
        android:layout_marginLeft="170dp"
        android:layout_marginStart="170dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView10"
        android:layout_toEndOf="@+id/textView10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/first"
        android:id="@+id/textView10"
        android:layout_marginLeft="70dp"
        android:layout_marginStart="70dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/totesStacked1"
        android:layout_alignStart="@+id/totesStacked1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/third"
        android:id="@+id/textView12"
        android:layout_marginLeft="170dp"
        android:layout_marginStart="170dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView11"
        android:layout_toEndOf="@+id/textView11" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/fourth"
        android:id="@+id/textView13"
        android:layout_marginLeft="170dp"
        android:layout_marginStart="170dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView12"
        android:layout_toEndOf="@+id/textView12" />

    <view
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        class="org.gosparx.scouting.aerialassist.controls.HorizontalNumberPicker"
        android:id="@+id/totesStacked1"
        android:layout_alignTop="@+id/textView9"
        android:layout_toRightOf="@+id/textView9"
        android:layout_toEndOf="@+id/textView9"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp" />

    <view
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        class="org.gosparx.scouting.aerialassist.controls.HorizontalNumberPicker"
        android:id="@+id/totesStacked2"
        android:layout_alignTop="@+id/totesStacked1"
        android:layout_toRightOf="@+id/totesStacked1"
        android:layout_toEndOf="@+id/totesStacked1"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp" />

    <view
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        class="org.gosparx.scouting.aerialassist.controls.HorizontalNumberPicker"
        android:id="@+id/totesStacked3"
        android:layout_alignTop="@+id/totesStacked2"
        android:layout_toRightOf="@+id/totesStacked2"
        android:layout_toEndOf="@+id/totesStacked2"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp" />

    <view
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        class="org.gosparx.scouting.aerialassist.controls.HorizontalNumberPicker"
        android:id="@+id/totesStacked4"
        android:layout_alignTop="@+id/totesStacked3"
        android:layout_toRightOf="@+id/totesStacked3"
        android:layout_toEndOf="@+id/totesStacked3"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp" />

</RelativeLayout>